# Course_work_OpenCL

./: CMakeLists.txt  README.md
TCP/: CMakeLists.txt  TCPSocket.cpp  TCPSocket.h
client/: CMakeLists.txt  SparseMatrix.cpp  SparseMatrix.h  client.cpp
client/data/: bcsstk05.txt  pll_post_short_A.txt  sparse_matrix.txt  sparse_matrix_112.txt  sparse_matrix_132.txt  sparse_matrix_420.txt
server/: CMakeLists.txt  conjugateGradient.cl  server.cpp  steepestDescent.cl
server/kernels/: conjugateGradient.cl  steepestDescent.cl
